data/derived/sp14/progs/unify/prog2132.ml.out
Characters 8-30:
  let _ = (List.combine [1] [2])
          ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int * int) list
       This is not a function; it cannot be applied.
